--- a/app/src/main/res/layout/mycardview.xml
+++ b/app/src/main/res/layout/mycardview.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mycardview"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
     card_view:cardCornerRadius="4dp"
     card_view:cardElevation="5dp">
@@ -18,7 +18,7 @@
         <ImageView
             android:id="@+id/ImageViewMascota"
             android:layout_width="match_parent"
-            android:layout_height="160dp" />
+            android:layout_height="160dp"/>
 
         <LinearLayout
             android:id="@+id/LinearLayout_Descripcion"
