--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.fdanesse.cardsviews.MainActivity"
+    tools:context="com.fdanesse.cardsviews.DetalleActivity"
     >
 
     <LinearLayout
@@ -14,8 +14,8 @@
         android:orientation="vertical">
 
         <include
-            android:id="@+id/mitoolbar"
-            layout="@layout/mitoolbar"
+            android:id="@+id/toolbar_detalle"
+            layout="@layout/toolbar_detalle"
             >
         </include>
 
@@ -27,13 +27,5 @@
             android:scrollbars="vertical"/>
 
     </LinearLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/Camara"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:src="@drawable/camera"/>
 
 </android.support.design.widget.CoordinatorLayout>
