--- a/app/src/main/res/layout/mycardview.xml
+++ b/app/src/main/res/layout/mycardview.xml
@@ -20,37 +20,50 @@
             android:layout_width="match_parent"
             android:layout_height="160dp"/>
 
-        <LinearLayout
+        <android.support.v7.widget.Toolbar
             android:id="@+id/LinearLayout_Descripcion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@color/primary_light">
 
             <ImageButton
-                android:id="@+id/huesoblanco"
+                android:id="@+id/hueso1"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/huesoblanco"
+                android:background="@android:color/transparent"
+                android:src="@drawable/hueso"
+                android:layout_gravity="left"
+                android:layout_marginRight="5dp"
                 android:scaleType="centerInside"/>
 
             <TextView
-                android:id="@+id/TextViewNombre"
-                android:layout_width="200dp"
-                android:layout_height="40dp"
+                android:id="@+id/nombre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Perro"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="16dp"
+                android:layout_gravity="left"
                 android:textSize="20sp"/>
 
             <ImageView
-                android:id="@+id/huesoamarillo"
-                android:layout_width="30dp"
+                android:id="@+id/hueso2"
+                android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_weight="1"
-                android:src="@drawable/huesoamarillo"
+                android:background="@android:color/transparent"
+                android:src="@drawable/hueso1"
+                android:layout_gravity="right"
+                android:layout_marginRight="5dp"
                 android:scaleType="centerInside"/>
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/raiting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="100"
+                android:layout_marginRight="5dp"
+                android:layout_gravity="right"
+                android:textSize="20sp"/>
+
+        </android.support.v7.widget.Toolbar>
     </LinearLayout>
 </android.support.v7.widget.CardView>
