--- a/app/src/main/res/layout/maintoolbar.xml
+++ b/app/src/main/res/layout/maintoolbar.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/toolbar"
+    android:id="@+id/maintoolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
@@ -26,26 +26,5 @@
         android:textSize="25dp"
 
         />
-
-    <ImageButton
-        android:id="@+id/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginRight="5dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/hueso"
-        />
-
-    <ImageButton
-        android:id="@+id/action"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginRight="10dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/star"
-        />
-
 
 </android.support.v7.widget.Toolbar>
