--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
 
         <include
             android:id="@+id/mitoolbar"
-            layout="@layout/maintoolbar"
+            layout="@layout/main_toolbar"
             >
         </include>
 
