--- a/app/src/main/res/layout/cardview_main.xml
+++ b/app/src/main/res/layout/cardview_main.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/detallecardview"
+    android:id="@+id/cardview_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
@@ -26,6 +26,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@color/primary_light">
+
+            <ImageButton
+                android:id="@+id/hueso1"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/hueso"
+                android:layout_gravity="left"
+                android:layout_marginRight="5dp"
+                android:scaleType="centerInside"/>
 
             <TextView
                 android:id="@+id/nombre"
